tests/snapshots/snapshots__html__pdf__handmade-tables.pdf.snap
---
source: tests/snapshots.rs
expression: output
---
<!DOCTYPE html>
<html>
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Inventory</title>
<style>
body { font-family: system-ui, sans-serif; line-height: 1.5; max-width: 50rem; margin: 2rem auto; padding: 0 1rem; }
table { border-collapse: collapse; margin: 1rem 0; }
th, td { border: 1px solid #999; padding: 0.25rem 0.5rem; vertical-align: top; }
table.layout, table.layout td { border: none; }
img { max-width: 100%; }
pre { overflow-x: auto; }
</style>
</head>
<body>
<h1 id="inventory">Inventory</h1>
<p>Stock on hand at the end of the quarter.</p>
<table>
<thead>
<tr><th>Item</th><th>Quantity</th><th>Price</th></tr>
</thead>
<tbody>
<tr><td>Widget 1</td><td>3</td><td>7.00</td></tr>
<tr><td>Widget 2</td><td>6</td><td>14.00</td></tr>
<tr><td>Widget 3</td><td>9</td><td>21.00</td></tr>
<tr><td>Widget 4</td><td>12</td><td>28.00</td></tr>
<tr><td>Widget 5</td><td>15</td><td>35.00</td></tr>
<tr><td>Widget 6</td><td>18</td><td>42.00</td></tr>
<tr><td>Widget 7</td><td>21</td><td>49.00</td></tr>
<tr><td>Widget 8</td><td>24</td><td>56.00</td></tr>
<tr><td>Widget 9</td><td>27</td><td>63.00</td></tr>
<tr><td>Widget 10</td><td>30</td><td>70.00</td></tr>
</tbody>
</table>
<h2 id="all-prices-exclude-tax">All prices exclude tax.</h2>
</body>
</html>
